--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0",
     "ts-jest": "^29.4.5"
+  },
+  "overrides": {
+    "minimatch": "^10.2.1"
   }
 }
